# jokes

./: README.md
.github/workflows/: api.yml  frontend.yml  main.yml
actix/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.sh  docker-compose.yml
actix/src/: api_doc.rs  main.rs
actix/src/routes/: hello.rs  method.rs  mod.rs  root.rs  upload.rs
actix/src/routes/query/: mod.rs  structured.rs  unstructured.rs
actix/src/routes/validation/: handlers.rs  mod.rs  models.rs  utils.rs  validators.rs
agitated-chebyshev/: Cargo.toml  README.md  Secrets.dev.toml
agitated-chebyshev/migrations/: 20250904065548_create_jokes_table.down.sql
agitated-chebyshev/src/lib/providers/: chuck_norris.rs  jokes_one.rs  official_joke.rs
agitated-chebyshev/src/routes/: method.rs  mod.rs  root.rs  upload.rs
agitated-chebyshev/src/routes/validation/: form.rs
api-shuttle/: .gitignore  Cargo.toml  Shuttle.toml  rustfmt.toml
api-shuttle/migrations/: 20250904065548_create_jokes_table.up.sql
api-shuttle/src/: api_doc.rs  lib.rs  main.rs
api-shuttle/src/lib/db/: mod.rs
api-shuttle/src/lib/providers/: dad_jokes.rs  manager.rs  mod.rs  sv443_joke.rs
api-shuttle/src/routes/: mod.rs
api-shuttle/src/routes/jokes/: mod.rs  random.rs  retrieve.rs
api-shuttle/src/routes/query/: unstructured.rs
api-shuttle/src/routes/validation/: handlers.rs  info.rs  json.rs  models.rs  upload.rs  utils.rs  validators.rs
condescending-hypatia/: Cargo.toml
frontend/: package-lock.json
frontend/src/app/: page.tsx
frontend/src/lib/: joke.ts
src/: package.json  tsconfig.json
src-actix/: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  postman_query_collection.json
src-actix/src/: api_doc.rs  main.rs
src-actix/src/lib/db/: mod.rs
src-actix/src/lib/providers/: jokes_api.rs  manager.rs
src-actix/src/providers/: chuck_norris.rs  dad_jokes.rs  jokes_api.rs  jokes_one.rs  manager.rs  official_joke.rs  sv443_joke.rs  types.rs
src-actix/src/routes/: hello.rs  method.rs  mod.rs  root.rs  upload.rs
src-actix/src/routes/query/: mod.rs  structured.rs  unstructured.rs
src-actix/src/routes/validation/: json.rs  mod.rs
src-hono/: .env.example  README.md  demo.ts  docker-compose.yml  index.ts  package.json  pnpm-lock.yaml
src-hono/db/: index.ts  init.ts  joke.ts
src-hono/db/init-scripts/: 01-init.sh
src-hono/migrations/: 1756902258155_create-jokes-table.js
src-hono/providers/: chuck-norris.ts  dad-jokes.ts  index.ts  joke-manager.ts  jokes-api.ts  jokes-one.ts  official-joke.ts  sv443-joke.ts  types.ts
src-hono/result/: jokes-2025-09-03T11-23-14-799Z.json  jokes-2025-09-03T11-28-46-462Z.json
