[package]
name = "agitated-chebyshev"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
shuttle-actix-web = "0.56.0"
shuttle-runtime = "0.56.0"
shuttle-shared-db = { version = "0.56.0", features = ["postgres"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5.4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "uuid", "json", "migrate", "tls-rustls"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
lazy_static = "1.4"
