[package]
name = "actix-jokes"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-multipart = "0.7"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
utoipa = { version = "5.4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
urlencoding = "2.1"
